@startuml
class Etablissement{
- nom : string not null
- slug : string not null
- description: string not null
- numeroTelephone: string not null
- adresse : string not null
- ville : ville not null
- adresseMail : string not null
- image : string null
- actif : bool not null
- accueil : bool not null
- createdAt : datetime not null
- updateAt : datetime null
- catégorie : catégorie not null
}

class Ville{
- nom : string not null
- codePostal : string not null
- nomDépartement : string not null
- numDépartement : string not null
- nomRégion : string not null
}

class Catégorie{
- nom : string not null
- createdAt : datetime not null
}

class Utilisateur
{
- prenom : string not null
- nom : string not null
- pseudo : string null
- mail : string not null
- motDePasse : string not null
- createdAt : datetime not null
- date de modification : datetime null
- roles : array not null
- actif : bool not null
- favoris : EtablissementArray null
}

Etablissement "0..*"--"1..1"Ville
Etablissement "0..*"--"1..*"Catégorie
Etablissement "0..*"--"0..*"Utilisateur

@enduml